# cmake-cpp-boilerplate

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml  cmake-format.yaml  conanfile.txt  main.cpp
.github/workflows/: linux.yml
cmake/: StandardProjectSettings.cmake  StaticAnalyzers.cmake  clangTidy.cmake  compiler.cmake  conan.cmake
common/: CMakeLists.txt
include/: dummy.hpp
src/: CMakeLists.txt  dummy.cpp  main.cpp
test/: CMakeLists.txt  dummy_test.cpp  main.cpp
unz/: CMakeLists.txt  main.c
